feat: listando os livros registrados em um determinado idioma